# Rust_Mistral_API

./: Cargo.toml  README.md  prompt.md
src/: config.rs  input.rs  main.rs
src/api/: client.rs  types.rs
src/core/: intent.rs
src/music/: mod.rs  types.rs
src/prompt_file/: prompt.md  prompt.rs
