[package]
name = "Mistral_api"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
dotenv = "0.15"
miette = { version = "7", features = ["fancy"] }
